Add reducer creator.

--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
   "homepage": "https://github.com/joeypoon/simple-react-navigation#readme",
   "devDependencies": {
     "babel-cli": "6.24.0",
-    "babel-preset-env": "1.2.2",
-    "babel-preset-react": "6.23.0"
-  },
-  "dependencies": {
-    "react": "15.4.2"
+    "babel-preset-env": "1.2.2"
   }
 }
