--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "",
   "scripts": {
-    "build": "babel src -d dist"
+    "build": "babel src -d ./"
   },
   "repository": {
     "type": "git",
