--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "devDependencies": {
     "babel-cli": "6.24.0",
     "babel-preset-env": "1.2.2"
+  },
+  "dependencies": {
+    "react": "^15.4.2"
   }
 }
