--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simple-react-navigation",
-  "version": "0.0.1",
+  "version": "1.0.0",
   "description": "",
   "scripts": {
     "build": "babel src -d ./"
@@ -20,6 +20,6 @@
     "babel-preset-env": "1.2.2"
   },
   "dependencies": {
-    "react": "^15.4.2"
+    "react": "15.4.2"
   }
 }
